# real-time-inference

./: .gitattributes  .gitignore  README.md  pyproject.toml  train.py  train_lightgbm.py  train_random_forest.py
data/: sample_batch.txt
model/: model.onnx  model.pmml  titanic_lightgbm.onnx  titanic_lightgbm.pmml  titanic_random_forest.onnx
models/titanic/: lightgbm_pipeline.pkl
notebook/: train_ligthgbm.ipynb  train_random_forest.ipynb
onnx-predictor/: pom.xml
onnx-predictor/libs/: README.md
onnx-predictor/src/main/java/com/example/: OnnxPredictor.java
pmml-demo/: pom.xml
pmml-demo/src/main/java/com/example/: OnnxPredictor.java  PMMLPredictor.java
pmml-demo/src/main/resources/: model.pmml
pmml-predictor/: pom.xml
pmml-predictor/src/main/java/com/example/: PMMLPredictor.java
pmml-standalone/: PMMLPredictor.java
pmml-standalone/model/: model.pmml
src/: export_to_pmml.py  model_export.py  train_lightgbm.py  train_random_forest.py
standalone-onnx/: OnnxPredictor.java  pom.xml
standalone-pmml/: PMMLPredictor.java  pom.xml
titanic/: export_to_pmml.py  train_lightgbm.py  train_random_forest.py
